# ChangeLog for sys-apps/policycoreutils
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/policycoreutils/ChangeLog,v 1.89 2011/08/12 18:46:59 blueness Exp $

  12 Sep 2011; <swift@gentoo.org> +policycoreutils-2.1.0-r1.ebuild,
  +metadata.xml:
  Support for semodule permissive

*policycoreutils-2.1.0-r1 (04 Sep 2011)

  04 Sep 2011; <swift@gentoo.org> +policycoreutils-2.1.0-r1.ebuild,
  +metadata.xml:
  Add keepdir on /var/lib/selinux to keep permissive definitions

  12 Aug 2011; Anthony G. Basile <blueness@gentoo.org>
  -policycoreutils-2.0.55.ebuild, -policycoreutils-2.0.69.ebuild,
  -policycoreutils-2.0.69-r1.ebuild, -policycoreutils-2.0.69-r2.ebuild,
  -files/policycoreutils-2.0.69-setfiles.diff:
  Removed deprecated versions

*policycoreutils-2.1.0 (03 Aug 2011)

  03 Aug 2011; Anthony G. Basile <blueness@gentoo.org>
  +policycoreutils-2.1.0.ebuild:
  Bump to 20110727 SELinux userspace release

*policycoreutils-2.0.85 (15 Jul 2011)

  15 Jul 2011; Anthony G. Basile <blueness@gentoo.org>
  +policycoreutils-2.0.85.ebuild,
  +files/policycoreutils-2.0.85-fix-seunshare-vuln.patch.gz,
  +files/policycoreutils-2.0.85-sesandbox.patch.gz:
  Add fix for bug #374897 and initial support for python3

  08 Jul 2011; Samuli Suominen <ssuominen@gentoo.org>
  policycoreutils-2.0.55.ebuild, policycoreutils-2.0.69.ebuild,
  policycoreutils-2.0.69-r1.ebuild, policycoreutils-2.0.69-r2.ebuild:
  Convert from "useq" to "use".

*policycoreutils-2.0.82-r1 (30 Jun 2011)

  30 Jun 2011; Anthony G. Basile <blueness@gentoo.org>
  +policycoreutils-2.0.82-r1.ebuild:
  Overwrite invalid .po files with valid ones, fixes bug #372807

  16 Jun 2011; Anthony G. Basile <blueness@gentoo.org>
  policycoreutils-2.0.82.ebuild:
  Drop use_nls dependency on gettext. Its mandatory. See bug #299681.
  Also put gettext in COMMON_DEPS, it is more than a RDEPEND.

  28 May 2011; Anthony G. Basile <blueness@gentoo.org>