@@ -1,6 +1,8 @@
+DIST policycoreutils-2.0.85-fix-seunshare-vuln.patch.gz 8962 RMD160 4175ac56c5c72ba37b3bd94009cbe17345444445 SHA1 f9a3b6d64f7b6632b8740cc4f07d8db029039e7c SHA256 2dc16bc7489d626a91d93356d80651795eb757a25fd807fbbf93c772f392b50f
 DIST policycoreutils-2.0.85-python3.tar.gz 19750 RMD160 ae5daef8bf9083964e37b101a6168dc6ce5b8bb2 SHA1 61c058cb39ef9f13dd54af844a033ac724de743c SHA256 4bc78bfd39ce43a010c4e1de3d7f4ff45fcfc7bac4bc70e28c9bdb681053fe4e
+DIST policycoreutils-2.0.85-sesandbox.patch.gz 4551 RMD160 28ea43ae81418e0d1da95904276b8cc7423ee1e1 SHA1 dfcbc87fecfbd335b51f1c020ca0f642245b6417 SHA256 9854b390e1283194b76335dcacc0b8f7d45d8fb025592e4e9b701122c925d1e1
 DIST policycoreutils-2.1.0.tar.gz 885913 RMD160 267829f78bc154dc96bc66678e82c5d07b522de5 SHA1 dae3e6d547a81e4be4ef7ab2a184256c6ad721ac SHA256 6199b07fd4280e455ea05933cee510b5e09ad3f60b0544382231fe05b787d3f3
 DIST policycoreutils-extra-1.21.tar.bz2 12864 RMD160 28e5d0f52a69e0cb9c0d2e8088e828cbac951732 SHA1 7866b24ddab5a48c95fd51b88ad1eb4af0d9572e SHA256 c2d3627e2a10f83f5de997e9db75c40830e7f3520b558807346c9bd9c49769bb
-EBUILD policycoreutils-2.1.0-r1.ebuild 4319 RMD160 55098e3750876b2f4e678fe72d49afa6e0d8cd81 SHA1 304069e1142e1d7c37fcb85f419ca8ccbbe3d1e4 SHA256 fd49deeccec63e0452b7e361237dadd74ec4f97f34b74e82d1a41020ae5a6499
-MISC ChangeLog 14592 RMD160 b20bdf53af90627c455b99ea5975375a673b2e8d SHA1 5ba0c6ef361d7217446fda5235159884ab2d6f6f SHA256 ae436ee01866ea298486c6e355ab0977976957ab8749a04a0f9183175b5beafe
+EBUILD policycoreutils-2.1.0-r1.ebuild 4518 RMD160 51580a6a8a193dd6929e8d76cc8aaf80510581f5 SHA1 c30597e7014e002b39bd4ed38643ad729e3374ea SHA256 7b6d993bd8bb90a17970c97cb3bc1eb283ae0aafc6162fe98cf885ebe5d02138
+MISC ChangeLog 14683 RMD160 ac66dd6638264b20c007bceca6a31629ee0c427a SHA1 ed4564656ec2eb43e14f56582bba1ad199a468f6 SHA256 34366595844dad35ab00ca51136465c8232f3fe56ea07ab0b6b469544acd74c1
 MISC metadata.xml 717 RMD160 0fc1c3cf181bfbe5d0e2c31e7c0db5f7a837cd91 SHA1 2ee21a2645c4e8e96e4714ba12ad0037631e83b9 SHA256 0c06ffad8c7c95b22992240c5fe0516a3e29a65ebe8da43e184fc2c8b08a1971
